// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button custom styles applies custom style prop 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FF3D3D",
      "borderRadius": 6,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "marginTop": 20,
      "opacity": 1,
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      [
        {
          "fontWeight": "500",
        },
        {
          "color": "#FFFFFF",
        },
        {
          "fontSize": 14,
        },
      ]
    }
  >
    Styled
  </Text>
</View>
`;

exports[`Button disabled state applies disabled opacity 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FF3D3D",
      "borderRadius": 6,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "opacity": 0.5,
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      [
        {
          "fontWeight": "500",
        },
        {
          "color": "#FFFFFF",
        },
        {
          "fontSize": 14,
        },
      ]
    }
  >
    Disabled
  </Text>
</View>
`;

exports[`Button disabled state renders correctly when disabled 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FF3D3D",
      "borderRadius": 6,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "opacity": 0.5,
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      [
        {
          "fontWeight": "500",
        },
        {
          "color": "#FFFFFF",
        },
        {
          "fontSize": 14,
        },
      ]
    }
  >
    Disabled
  </Text>
</View>
`;

exports[`Button loading state is disabled when loading 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FF3D3D",
      "borderRadius": 6,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "opacity": 0.5,
      "paddingHorizontal": 16,
    }
  }
>
  <ActivityIndicator
    color="#FFFFFF"
    size="small"
  />
</View>
`;
